# kairos

./: .gitignore  CLAUDE.md  Dockerfile.tuning  README.md  pyproject.toml
.github/workflows/: tuning-container.yaml
db/: 01_candles.sql  02_forecasts.sql  __init__.py  queries.py
scripts/: analysis.py  evaluate.py  export.py  forecast.py  ingest.py  walkforward.py
tuning/: config.yaml.tmpl  run.sh
tuning/model/: __init__.py
